--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&display=swap" rel="stylesheet">
-    <style> @import url('https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&display=swap'); </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&display=swap');
+    </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap');
+    </style>
     <link rel="shortcut icon" href="./assests/M-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Marvel | Fans</title>
@@ -14,12 +24,13 @@
 
 <body>
     <div id="top_container">
-        <input type="text" name="search" id="search_text" required>
-        <button type="submit" id="toclick" onclick="show_results()"> 
-            Search
-            <!-- <a href="" target="_parent" rel="noopener noreferrer" id="getbtn_link"> -->
-            <!-- </a> -->
-        </button>
+        <div id="logo_container">
+            <a href="./index.html">
+                <img src="./assests/Marvel_Logo.svg.png" alt="" srcset="" id="logo">
+            </a>
+        </div>
+        <input type="text" name="search" id="search_text" placeholder="Type to search..." required>
+        <button type="submit" id="tosearch" onclick="show_results()">Search</button>
     </div>
     <div class="major_container">
         <div id="listHolder">
