Configured and rendered the character details page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap');
     </style>
-    <link rel="shortcut icon" href="./assests/M-favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./assests/images/M-favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assests/css/style.css">
     <title>Marvel | Fans</title>
 </head>
 
@@ -26,7 +26,7 @@
     <div id="top_container">
         <div id="logo_container">
             <a href="./index.html">
-                <img src="./assests/Marvel_Logo.svg.png" alt="" srcset="" id="logo">
+                <img src="./assests/images/Marvel_Logo.svg.png" alt="" srcset="" id="logo">
             </a>
         </div>
         <input type="text" name="search" id="search_text" placeholder="Type to search..." required>
@@ -37,7 +37,7 @@
 
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./assests/scripts/script.js"></script>
 </body>
 
 </html>
