Local storage started maintaining the favourite characters

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         </div>
         <input type="text" name="search" id="search_text" placeholder="Type to search..." required>
         <button type="submit" id="tosearch" onclick="show_results()">Search</button>
+        <button type="button" id="micro_fav_btn">FAV- 
+            <div id="micro_icon"> 
+                <img src="./assests/images/M-favicon.png" alt="" srcset=""> 
+            </div> 
+        </button>
     </div>
     <div class="major_container">
         <div id="listHolder">
