Favorites page created

--- a/details.html
+++ b/details.html
@@ -12,11 +12,13 @@
 
 <body>
     <div id="top_container">
+        <span class="head_fav"> HERO </span>
         <div id="logo_container">
             <a href="./index.html">
                 <img src="./assests/images/Marvel_Logo.svg.png"  id="logo" alt="logo" srcset="">
             </a>
         </div>
+        <span class="head_fav"> DETAILS </span>
     </div>
     <div id="master_container">
         <div class="left_container">
