cleaned and formatted code with comments

--- a/details.html
+++ b/details.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Page info with home button -->
     <div id="top_container">
         <span class="head_fav"> HERO </span>
         <div id="logo_container">
@@ -21,9 +22,13 @@
         <span class="head_fav"> DETAILS </span>
     </div>
     <div id="master_container">
+
+        <!-- to display the thumbnail of character -->
         <div class="left_container">
             <div class="thumb_container"></div>
         </div>
+
+        <!-- to display the information related tocharacter -->
         <div class="right_container"></div>
     </div>
     <script src="./assests/scripts/details.js"></script>
