--- a/favourites.html
+++ b/favourites.html
@@ -15,6 +15,7 @@
     <title>Marvel | Fav</title>
 </head>
 <body>
+    <!-- Heading containing the page info and Home navigation icon -->
     <div id="top_container">
         <span class="head_fav"> FAVOURITE </span>
         <div id="logo_container">
@@ -26,6 +27,7 @@
     </div>
 
     <div class="major_container">
+        <!-- Render the local data -->
         <div id="listHolder">
 
         </div>
