--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </a>
     </div>
     <div class="major_container">
+        <!-- Container that will list all the fetched items -->
         <div id="listHolder">
 
         </div>
